<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_20"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".WriteDataActivity">

    <EditText
        android:id="@+id/edit_text_name_write"
        android:layout_width="@dimen/dp_300"
        android:layout_height="wrap_content"
        android:hint="@string/nhap_ho_ten" />

    <EditText
        android:id="@+id/edit_text_id_write"
        android:layout_width="@dimen/dp_300"
        android:layout_height="wrap_content"
        android:hint="@string/nhap_ma_sinh_vien" />

    <Button
        android:id="@+id/button_write_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/blue"
        android:text="@string/ghi_vao_internal" />

    <Button
        android:id="@+id/button_write_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/blue"
        android:text="@string/ghi_vao_external_storage" />

    <Button
        android:id="@+id/button_read_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/blue"
        android:text="@string/doc_tu_internal" />

    <Button
        android:id="@+id/button_read_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/blue"
        android:text="@string/doc_tu_external_storage" />

    <Button
        android:id="@+id/button_backToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/blue"
        android:text="@string/tro_ve_mainactivity" />

</LinearLayout>
