<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_20"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".InternalStorageActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_internal_storage"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_path_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_100"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:id="@+id/text_view_name_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:id="@+id/text_view_id_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp_20"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20" />

    <Button
        android:id="@+id/button_show_data_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@color/blue"
        android:text="@string/hien_du_lieu" />

    <Button
        android:id="@+id/button_backToWrite_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/blue"
        android:text="@string/quay_lai_ghi_du_lieu" />

</LinearLayout>
